--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,12 +2,12 @@
   .SideBar__user
     .top-items
       .top-items__user-name
-        masa
+        = current_user.name
       .top-items__icons
         = link_to "#", class: "icons__btn--make-group" do
           =icon('far','edit', class: "icon edit-btn")
           %span<>
-        =link_to "#", class: "icons__btn__edit-account" do
+        =link_to edit_user_path(current_user), class: "icons__btn__edit-account" do
           =icon('fas','cog', class: "icon cog-btn")
           %span<>
 
